# tictactoe-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.MD  main.cpp
.github/workflows/: tests.yml
includes/: tictactoe.h
src/: tictactoe.cpp
tests/: CMakeLists.txt  main.cpp  test_tictactoe.cpp
tests/foo/: test_foo.cpp
